# tkey-rust-android

./: .gitignore  Coverage.md  ReadMe.md  build.gradle  jitpack.yml  settings.gradle
.github/workflows/: build.yml
.instrumentationTest/: All Tests.run.xml
app/: build.gradle
app/src/androidTest/java/com/web3auth/tkey_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jniCommon.cpp  jniHash.cpp
app/src/main/java/com/web3auth/tkey_android/: FFIHash.java  MainActivity.java
app/src/main/jniLibs/: tkey.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/web3auth/tkey_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sample-app/app/: build.gradle
sample-app/app/src/main/res/layout/: fragment_first.xml
tkey/: build.gradle
tkey/libs/include/: tkey.h
tkey/src/androidTest/java/com/web3auth/tkey/: TKeyInstrumentedTest.java  tkeyGenerateShareStoreResultTest.java  tkeyKeyDetailsTest.java  tkeyKeyPointArrayTest.java  tkeyKeyPolynomialTest.java  tkeyKeyPublicPolynomialTest.java  tkeyKeyReconstructionDetailsTest.java  tkeyKeypointTest.java  tkeyLocalMetadataTransitionsTest.java  tkeyMetadataTest.java  tkeyPrivateKeyTest.java  tkeyRuntimeErrorTest.java  tkeyServiceProviderTest.java  tkeyShareStore.java  tkeyShareStoreArrayTest.java  tkeyShareStoreMapTest.java  tkeyShareStorePolyIdIndexMapTest.java  tkeyShareStoreTest.java  tkeyStorageLayerTest.java  tkeyThresholdKeyTest.java  tkeyVersionTest.java
tkey/src/androidTest/java/com/web3auth/tkey_android_distribution/: TKeyInstrumentedTest.java
tkey/src/main/: AndroidManifest.xml
tkey/src/main/cpp/: CMakeLists.txt  jniGenerateShareStoreResult.cpp  jniKeyDetails.cpp  jniKeyPointArray.cpp  jniKeyReconstructionDetails.cpp  jniLocalMetadataTransitions.cpp  jniMetadata.cpp  jniPolynomial.cpp  jniPublicPolynomial.cpp  jniRssComm.cpp  jniServiceProvider.cpp  jniShareMap.cpp  jniShareStoreArray.cpp  jniShareStoreMap.cpp  jniShareStorePolyIdIndexMap.cpp  jniShareTransferStore.cpp  jniStorageLayer.cpp  jniThresholdKey.cpp  jniVersion.cpp
tkey/src/main/cpp/common/: jniCommon.cpp  jniKeyPoint.cpp  jniNodeDetails.cpp  jniPrivateKey.cpp  jniServerOptions.cpp  jniShareStore.cpp  jniTKeyNodeDetails.cpp  jniTssOptions.cpp
tkey/src/main/cpp/modules/: jniPrivateKeysModule.cpp  jniSecurityQuestionModule.cpp  jniSeedPhraseModule.cpp  jniShareSerializationModule.cpp  jniShareTransferModule.cpp  jniTSSModule.cpp
tkey/src/main/java/com/web3auth/tkey/: RuntimeError.java  Version.java
tkey/src/main/jniLibs/: tkey.h
tkey/src/main/res/values/: strings.xml  themes.xml
tkey/src/main/res/values-night/: themes.xml
(+67 files in other folders)
